WIP: Define PotassiumData{Input,Output}
// FIXME: improve NIP serialization

JIRA: YANGTOOLS-568
Change-Id: Ibb81fb2980c156e61d9535017cc4fae65a10fbb6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>